# _bot

./: Editor contact2.py  Editor_contact_new.py  LICENSE  README.md  Search contact2.py  Search_contact_new.py  _bot_class_diagram.drawio  find_nearest_birthday_people.py  main.py  note.py  notes_book.py  pyproject.toml  requirements.txt  sort.py
bot/: Bot.py  __init__.py  main.py
bot/controller/: InputProcessor.py
bot/models/: AddressBook.py  __init__.py  address.py  address_book.py  birthday.py  email.py  name.py  phone.py
contact_classes/: Address.py  Address_book.py  Adressbook_functions.py  Birthday.py  Data_transfer.py  Email.py  Field.py  Name.py  Phone.py  Record.py  Write_file.py
src/bot/: __main__.py  bot.py
src/bot/controller/: __init__.py  input_processor.py
src/bot/models/: __init__.py  address_book.py  adressbook_functions.py  birthday.py  content.py  data_transfer.py  email.py  field.py  name.py  note.py  note_book.py  phone.py  record.py  tag.py  title.py
src/bot/utils/: __init__.py  command_completer.py  sort.py
tests/: sort_test.py
utility/: __init__.py  sort.py
