[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "t21_bot"
dynamic = ["version"]
authors = [
    { name="Ievgen Bardadym", email="ievgen.bardadym@gmail.com" }
]
description = "Bot assistant"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ib-ua/_bot"
Issues = "https://github.com/ib-ua/_bot/issues"

[project.scripts]
bot = "bot.main:main"


